# understanding-nn

./: pyproject.toml
tests/: test_understanding_nn.py
understanding_nn/: main.py  neural_net.py
