[tool.poetry]
name = "understanding-nn"
version = "0.1.0"
description = "Rudamentary neural network implementations"
authors = ["mintchkin <mintchkin.dobfner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
rope = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
